--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,12 @@
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
         <!-- end::validationStarter[] -->
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
