--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,12 @@
 spring:
+  h2:
+    console:
+      enabled=true:
   datasource:
     generate-unique-name: false
     name: tacocloud
+  jpa:
+    database-platform=org:
+      hibernate:
+        dialect:
+          H2Dialect:
