--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 logging.level.org.springframework.security=debug
+server.port=8443
+server.ssl.key-store= file:///Users/illiababich/mykeys.jks
+server.ssl.key-store-password=437411deoOl
+server.ssl.key-password=437411deoOl
